--- a/Backend/DataAccess/package.json
+++ b/Backend/DataAccess/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dataaccess",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
