--- a/Backend/DataAccess/package.json
+++ b/Backend/DataAccess/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dataaccess",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,5 +13,6 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
