--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
