--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,8 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.2",
+    "install": "^0.13.0",
+    "npm": "^9.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -22,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
+    "reactstrap": "^9.1.6",
     "sass": "^1.58.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
